Added endpoint for creating user accounts
